crates/bevy_ecs/compile_fail/tests/ui/constraint_require_violation.stderr
error[E0080]: evaluation panicked: Constraint violation: a required component is missing from the bundle
  --> tests/ui/invariant/constraint_require_violation.rs:11:10
   |
11 | #[derive(Bundle)]
   |          ^^^^^^ evaluation of `_` failed inside this call
   |
note: inside `check_require`
  --> $BEVY_ROOT/bevy_ecs/src/invariant/validate.rs:45:9
   |
45 | /         assert!(
46 | |             found,
47 | |             "Constraint violation: a required component is missing from the bundle"
48 | |         );
   | |_________^ the failure occurred here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
